Revert "fixing gap pt2"
This reverts commit 721f9f9518152feb616eea0455208656c3da0656.

--- a/style.css
+++ b/style.css
@@ -119,9 +119,3 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-
-#gapfixer {
-	margin:0px;
-	
-	
-}
